# osupp

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  beatmap.cpp  beatmap.h  beatmap_file.cpp  beatmap_file.h  curves.cpp  curves.h  database.cpp  database.h  library.cpp  main.cpp  maths.cpp  maths.h  models.cpp  models.h  setup.py  utils.cpp  utils.h
docs/: conf.py  index.rst  osuppy.rst  osupy.rst
executable/: CMakeLists.txt  main.cpp
osupp/: CMakeLists.txt  beatmap_io.cpp  beatmap_io.h  curves.cpp  curves.h  database.cpp  maths.cpp  models.cpp  models.h  utils.cpp
osuppy/: CMakeLists.txt  main.cpp
osupy/: CMakeLists.txt  main.cpp
