cmake_minimum_required(VERSION 3.8)
project(osupp)
set(CMAKE_CXX_STANDARD 11)
set(SOURCES models.cpp database.cpp maths.cpp curves.cpp)
if (BUILD_EXEC)
    add_executable(osupp main.cpp ${SOURCES})
else ()
    add_subdirectory(../libs/pybind11 "${CMAKE_CURRENT_BINARY_DIR}/pybind11")
    pybind11_add_module(osupp library.cpp ${SOURCES})
endif ()