cmake_minimum_required(VERSION 3.8)
project(osupp)
set(CMAKE_CXX_STANDARD 11)
set(SOURCES models.cpp database.cpp maths.cpp curves.cpp beatmap_file.cpp utils.cpp)
if (BUILD_LIBRARY)
    add_library(osupp ${SOURCES})
elseif (BUILD_PYTHON)
    add_subdirectory(../libs/pybind11 "${CMAKE_CURRENT_BINARY_DIR}/pybind11")
    pybind11_add_module(osupp library.cpp ${SOURCES})
else ()
    add_executable(osupp main.cpp ${SOURCES})
endif ()